--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
        <div class="header">
-        
+
        </div>
+       <div class="main"></div>
     </div>
     <script src="script.js"></script>
 </body>
