--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
        <div class="header">
+        <a>Home</a>
+        <a>About</a>
+        <a>Contact</a>
         <img>
 
        </div>
