just started the ui of my restaurant page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <div class="container">
-       <div class="header">
-        <a>Home</a>
-        <a>About</a>
-        <a>Contact</a>
-        <img>
-
+       <img src="photos/chefbackground.jpg" alt="cooking chef" class="bg-photo">
+       <div class="overlay">
+        
        </div>
-       <div class="main"></div>
     </div>
     <script src="script.js"></script>
 </body>
