added logo and header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <div class="container">
        <img src="photos/chefbackground.jpg" alt="cooking chef" class="bg-photo">
        <div class="overlay">
-        
+          <div class="header">
+            <img src="photos/newlogo.png" alt="logo photo" width="50px" height="50px">
+            <a href="about.html">About</a>
+            <a href="menu.html">Menu</a>
+            <a href=""></a>
+            <a href=""></a>
+            <div class="user">
+                <a href="login.html">Login/Register</a>
+            </div>
+          </div>
        </div>
     </div>
     <script src="script.js"></script>
