--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
        <div class="overlay">
           <div class="header">
             <img src="photos/newlogo.png" alt="logo photo" width="50px" height="50px">
-            <a href="about.html">About</a>
-            <a href="menu.html">Menu</a>
-            <a href=""></a>
-            <a href=""></a>
+            <div class="links">
+              <a href="about.html">About</a>
+              <a href="menu.html">Menu</a>
+              <a href=""></a>
+              <a href=""></a>
+            </div>
             <div class="user">
                 <a href="login.html">Login/Register</a>
             </div>
