--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="links">
               <a href="about.html">About</a>
               <a href="menu.html">Menu</a>
-              <a href=""></a>
-              <a href=""></a>
+              <a href="article.html">Article</a>
+              <a href="contact.html">Contact</a>
             </div>
             <div class="user">
                 <a href="login.html">Login/Register</a>
