just finished the nav-bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <img src="photos/chefbackground.jpg" alt="cooking chef" class="bg-photo">
        <div class="overlay">
           <div class="header">
-            <img src="photos/newlogo.png" alt="logo photo" width="50px" height="50px">
+            <img src="photos/newlogo.png" alt="logo photo" width="50px" height="50px" class="logo">
             <div class="links">
               <a href="about.html">About</a>
               <a href="menu.html">Menu</a>
@@ -19,7 +19,7 @@
               <a href="contact.html">Contact</a>
             </div>
             <div class="user">
-                <a href="login.html">Login/Register</a>
+               <p><a href="login.html">Login  </a><a>/</a> <a href="register.html">  Register</a></p> 
             </div>
           </div>
        </div>
