--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                <p><a href="login.html">Login  </a><a>/</a> <a href="register.html">  Register</a></p> 
             </div>
           </div>
+          <div class="main">
+            <div class="left-content">
+               <h1>Food for thought</h1>
+               <h3>The best medication for the body is a good meal</h3>
+               <p>Tasty and delicious. walk in tired and hungry, walk out replenished and elated</p>
+               <button>See menu<i></i></button>
+            </div>
+            <div class="right-content">
+               <img src="photos/trainchick.png">
+            </div>
+          </div>
        </div>
     </div>
     <script src="script.js"></script>
