completing the index page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="left-content">
                <h1>Food for thought</h1>
                <h3>The best medication for the body is a good meal</h3>
-               <p>Tasty and delicious. walk in tired and hungry, walk out replenished and elated</p>
+               <p>Tasty and delicious. walk in tired and hungry, walk out replenished and elated.
+                   One can not think well, love well, sleep well, if one has not dine well.
+                   Part of the secret of success in life is to eat what you like and let the food fight it out inside.
+               </p>
                <button>See menu<i></i></button>
             </div>
             <div class="right-content">
