styled the button on the index page

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
               <a href="contact.html">Contact</a>
             </div>
             <div class="user">
-               <p><a href="login.html">Login  </a><a>/</a> <a href="register.html">  Register</a></p> 
+               <p><a href="login.html">Login  </a>/<a href="register.html">  Register</a></p> 
             </div>
           </div>
           <div class="main">
             <div class="left-content">
                <h1>Food for thought</h1>
-               <h3>The best medication for the body is a good meal</h3>
+               <h3 style="color: orange;">The best medication for the body is a good meal</h3>
                <p>Tasty and delicious. walk in tired and hungry, walk out replenished and elated.
                    One can not think well, love well, sleep well, if one has not dine well.
                    Part of the secret of success in life is to eat what you like and let the food fight it out inside.
                </p>
-               <button>See menu<i></i></button>
+               <button>Go to menu<i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
             <div class="right-content">
-               <img src="photos/trainchick.png">
+               <img src="photos/trainchick.png" alt="Chicken">
             </div>
           </div>
        </div>
