--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="main-body">
+        <div class="header-content"></div>
+        <div class="body-content">
+            <input type="text" id="search" placeholder="search">
+        </div>
+    </div>
 </body>
 </html>
