--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="main-body">
-        <div class="header-content"></div>
+        <div class="header-content">
+            <a href="index.html">Home</a>
+            <a href="article.html">Article</a>
+            <span>Cart </span>
+        </div>
         <div class="body-content">
             <input type="text" id="search" placeholder="search">
         </div>
