--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,12 @@
         </div>
         <div class="body-content">
             <input type="text" id="search" placeholder="search">
+            <div class="elements">
+                <div class="col-25"></div>
+                <div class="col-25"></div>
+                <div class="col-25"></div>
+                <div class="col-25"></div>
+            </div>
         </div>
     </div>
 </body>
