--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,10 @@
         <div class="body-content">
             <input type="text" id="search" placeholder="search">
             <div class="elements">
-                <div class="col-25"></div>
+                <div class="col-25">
+                    <img src="photos/fries.png" alt="fries">
+                    <p>Fresh fries</p>
+                </div>
                 <div class="col-25"></div>
                 <div class="col-25"></div>
                 <div class="col-25"></div>
