working on the menu

--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,10 @@
                     <img src="photos/fries.png" alt="fries">
                     <p>Fresh fries</p>
                 </div>
-                <div class="col-25"></div>
+                <div class="col-25">
+                    <img src="photos/chicken.png" alt="fries">
+                    <p>Italian fries</p>
+                </div>
                 <div class="col-25"></div>
                 <div class="col-25"></div>
             </div>
