--- a/menu.html
+++ b/menu.html
@@ -24,8 +24,13 @@
                     <img src="photos/chicken.png" alt="fries">
                     <p>Italian fries</p>
                 </div>
-                <div class="col-25"></div>
-                <div class="col-25"></div>
+                <div class="col-25">
+                    <img src="photos/salad.png" alt="salad">
+                    <p>Salad</p>
+                </div>
+                <div class="col-25">
+                    <img src="photos/pizza.png" alt="pizza">
+                </div>
             </div>
         </div>
     </div>
