still working on the menu page

--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+        .main-body{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: gray;
+    
+}
+.header-content{
+
+}
+.body-content{
+    width: 100%;
+    margin: 0;
+}
+.elements{
+    background-color: yellow;
+    overflow: hidden;
+    width: 90%;
+    padding: 20px;
+    height: auto;
+    margin: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.col-25{
+    width: 30%;
+    height: auto;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: white;
+}
+.col-25 > p{
+    color: black;
+}
+.col-25 >img{
+    width: 100%;
+}
+    </style>
 </head>
 <body>
     <div class="main-body">
@@ -25,11 +69,12 @@
                     <p>Italian fries</p>
                 </div>
                 <div class="col-25">
-                    <img src="photos/salad.png" alt="salad">
+                    <img src="photos/pizza.png" alt="salad">
                     <p>Salad</p>
                 </div>
                 <div class="col-25">
-                    <img src="photos/pizza.png" alt="pizza">
+                    <img src="photos/images (3).png" alt="pizza">
+                    <p>Still fries</p>
                 </div>
             </div>
         </div>
