--- a/menu.html
+++ b/menu.html
@@ -9,17 +9,24 @@
         .main-body{
     box-sizing: border-box;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     background-color: gray;
     
 }
 .header-content{
-
+ width: 100%;
+ padding: 20px;
 }
 .body-content{
     width: 100%;
     margin: 0;
+}
+input{
+    display: block;
+    width: 350px;
+    padding: 8px;
+    margin: 20px auto;
 }
 .elements{
     background-color: yellow;
