working on the interface

--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,14 @@
                     <img src="photos/images (3).png" alt="pizza">
                     <p>Still fries</p>
                 </div>
+                <div class="col-25">
+                    <img src="photos/fruitsalad.jpeg" alt="pizza">
+                    <p>Still fries</p>
+                </div>
+                <div class="col-25">
+                    <img src="photos/chees.jpeg" alt="pizza">
+                    <p>Still fries</p>
+                </div>
             </div>
         </div>
     </div>
