--- a/menu.html
+++ b/menu.html
@@ -22,26 +22,32 @@
                 <div class="col-25">
                     <img src="photos/fries.png" alt="fries">
                     <p>Fresh fries</p>
+                    <p> Price<span>$10</span></p>
                 </div>
                 <div class="col-25">
                     <img src="photos/chicken.png" alt="fries">
                     <p>Italian fries</p>
+                    <p> Price<span>$10</span></p>
                 </div>
                 <div class="col-25">
                     <img src="photos/pizza.png" alt="salad">
                     <p>Salad</p>
+                    <p> Price<span>$10</span></p>
                 </div>
                 <div class="col-25">
                     <img src="photos/images (3).png" alt="pizza">
                     <p>Still fries</p>
+                    <p> Price<span>$10</span></p>
                 </div>
                 <div class="col-25">
                     <img src="photos/fruitsalad.jpeg" alt="pizza">
                     <p>Still fries</p>
+                    <p> Price<span></span></p>
                 </div>
                 <div class="col-25">
                     <img src="photos/chees.jpeg" alt="pizza">
                     <p>Still fries</p>
+                    <p> Price<span>$10</span></p>
                 </div>
             </div>
         </div>
