still in menu page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                    One can not think well, love well, sleep well, if one has not dine well.
                    Part of the secret of success in life is to eat what you like and let the food fight it out inside.
                </p>
-               <button>Go to menu<i class="fa-solid fa-arrow-right-long"></i></button>
+               <button><a href="menu.html">Go to menu</a><i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
             <div class="right-content">
                <img src="photos/trainchick.png" alt="Chicken">
