--- a/menu.html
+++ b/menu.html
@@ -49,6 +49,16 @@
                     <p>Still fries</p>
                     <span>$10</span>
                 </div>
+                <div class="col-25">
+                    <img src="photos/bowlchic.png" alt="pizza">
+                    <p>Still fries</p>
+                    <span>$3</span>
+                </div>
+                <div class="col-25">
+                    <img src="photos/download (3).jpeg" alt="pizza">
+                    <p>Still fries</p>
+                    <span></span>
+                </div>
             </div>
         </div>
     </div>
