--- a/menu.html
+++ b/menu.html
@@ -12,8 +12,11 @@
 <body>
     <div class="main-body">
         <div class="header-content">
-            <a href="index.html">Home</a>
-            <a href="article.html">Article</a>
+            <div class="header-a-content">
+                <a href="index.html">Home</a>
+                <a href="article.html">Article</a>
+            </div>
+           
             <span>Cart </span>
         </div>
         <div class="body-content">
