--- a/menu.html
+++ b/menu.html
@@ -62,6 +62,11 @@
                     <p>Still fries</p>
                     <span></span>
                 </div>
+                <div class="col-25">
+                    <img src="photos/fullchick.png" alt="pizza">
+                    <p>Still fries</p>
+                    <span></span>
+                </div>
             </div>
         </div>
     </div>
