--- a/menu.html
+++ b/menu.html
@@ -25,47 +25,74 @@
                 <div class="col-25">
                     <img src="photos/fries.png" alt="fries">
                     <p>Fresh fries</p>
-                    <span>$10</span>
+                    <div class="price-add">
+                      <span>$10</span>
+                      <button>Add</button>
+                    </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/chicken.png" alt="fries">
                     <p>Italian fries</p>
-                    <span>$10</span>
+                    <div class="price-add">
+                        <span>$7</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/pizza.png" alt="salad">
                     <p>Salad</p>
-                    <span>$10</span>
+                    <div class="price-add">
+                        <span>$3</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/images (3).png" alt="pizza">
                     <p>Still fries</p>
-                    <span>$10</span>
+                    <div class="price-add">
+                        <span>$4</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/fruitsalad.jpeg" alt="pizza">
                     <p>Still fries</p>
-                    <span></span>
+                    <div class="price-add">
+                        <span>$5</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/chees.jpeg" alt="pizza">
                     <p>Still fries</p>
-                    <span>$10</span>
+                    <div class="price-add">
+                        <span>$10</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/bowlchic.png" alt="pizza">
                     <p>Still fries</p>
-                    <span>$3</span>
+                    <div class="price-add">
+                        <span>$10</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/download (3).jpeg" alt="pizza">
                     <p>Still fries</p>
-                    <span></span>
+                    <div class="price-add">
+                        <span>$10</span>
+                        <button>Add</button>
+                      </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/fullchick.png" alt="pizza">
                     <p>Still fries</p>
-                    <span></span>
+                    <div class="price-add">
+                        <span>$6</span>
+                        <button>Add</button>
+                      </div>
                 </div>
             </div>
         </div>
