--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
     <style>
        
     </style>
@@ -17,7 +18,9 @@
                 <a href="article.html">Article</a>
             </div>
            
-            <span>Cart </span>
+            <div class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i>
+                <div class="counter"></div>
+            </div>
         </div>
         <div class="body-content">
             <input type="text" id="search" placeholder="search">
