--- a/menu.html
+++ b/menu.html
@@ -16,13 +16,15 @@
             <div class="header-a-content">
                 <a href="index.html">Home</a>
                 <a href="article.html">Article</a>
+                <a href="contact.html">Contact</a>
             </div>
-           
+            <div class="dark-bright"><i class="fa-solid fa-circle-half-stroke"></i></div>
             <div class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i>
                 <div class="counter"></div>
             </div>
         </div>
         <div class="body-content">
+            <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" id="search" placeholder="search">
             <div class="elements">
                 <div class="col-25">
