--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
                     <p>Fresh fries</p>
                     <div class="price-add">
                       <span>$10</span>
-                      <button>Add</button>
+                      <button class="inside-button">Add</button>
                     </div>
                 </div>
                 <div class="col-25">
@@ -40,7 +40,7 @@
                     <p>Italian fries</p>
                     <div class="price-add">
                         <span>$7</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -48,7 +48,7 @@
                     <p>Salad</p>
                     <div class="price-add">
                         <span>$3</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -56,7 +56,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$4</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -64,7 +64,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$5</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -72,7 +72,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$10</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -80,7 +80,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$10</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -88,7 +88,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$10</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
@@ -96,7 +96,7 @@
                     <p>Still fries</p>
                     <div class="price-add">
                         <span>$6</span>
-                        <button>Add</button>
+                        <button class="inside-button">Add</button>
                       </div>
                 </div>
             </div>
