--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-25">
                     <img src="photos/images (3).png" alt="pizza">
-                    <p>Still fries</p>
+                    <p>pizza</p>
                     <div class="price-add">
                         <span>$4</span>
                         <button class="inside-button">Add</button>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-25">
                     <img src="photos/bowlchic.png" alt="pizza">
-                    <p>Still fries</p>
+                    <p>Pizza</p>
                     <div class="price-add">
                         <span>$10</span>
                         <button class="inside-button">Add</button>
