working on the functionality

--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
                 <a href="article.html">Article</a>
                 <a href="contact.html">Contact</a>
             </div>
-            <div class="dark-bright"><i class="fa-solid fa-circle-half-stroke"></i></div>
+            <div class="dark-bright" id="dark-bright"><i class="fa-solid fa-circle-half-stroke"></i></div>
             <div class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i>
                 <div class="counter"></div>
             </div>
@@ -102,5 +102,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
