make the background chage color from black to white

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <div class="main-body">
+    <div id="content-body" class="main-body">
         <div class="header-content">
             <div class="header-a-content">
                 <a href="index.html">Home</a>
