--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,9 @@
     <div id="content-body" class="main-body">
         <div class="header-content">
             <div class="header-a-content">
-                <a href="index.html">Home</a>
-                <a href="article.html">Article</a>
-                <a href="contact.html">Contact</a>
+                <a class="change" href="index.html">Home</a>
+                <a class="change" href="article.html">Article</a>
+                <a class="change" href="contact.html">Contact</a>
             </div>
             <div class="dark-bright" id="dark-bright"><i class="fa-solid fa-circle-half-stroke"></i></div>
             <div class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i>
