did some jscript function

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                <button><a href="menu.html">Go to menu<i class="fa-solid fa-arrow-right-long"></i></a></button>
             </div>
             <div class="right-content">
-               <img src="photos/trainchick.png" alt="Chicken">
+               <img src="photos/trainchick.png" alt="Chicken" width="350px">
             </div>
           </div>
        </div>
