still signup page

--- a/register.html
+++ b/register.html
@@ -7,6 +7,16 @@
     <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="main-form">
+        <form>
+            <fieldset>
+                <legend>Info</legend>
+                <label>First name:</label>
+                <input type="text" name="firstname" id="firstname" placeholder="firstname" required>
+                <label>Last name:</label>
+                <input type="text" name="lasttname" id="lastname" placeholder="lastname" required>
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
