--- a/register.html
+++ b/register.html
@@ -19,10 +19,13 @@
                 <input type="email" name="email" id="email" placeholder="ex@me.com" required>
                 <label for="pwd">Password</label>
                 <input type="password" name="pwd" id="pwd" placeholder="Password" required>
+                <label for="pwd">Repeat password</label>
+                <input type="password" name="pwd" id="pwd" placeholder="Password" required>
             </fieldset>
             <fieldset>
-                <input type="checkbox" id="show-pwd"> <label>Show password</label>
+                <input type="checkbox" id="show-pwd"> <label>I have read the terms and condition.</label>
             </fieldset>
+            <button id="submit-btn">Submit</button>
         </form>
     </div>
 </body>
