--- a/register.html
+++ b/register.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="main-form">
+        <a href="index.html">Home</a>
+      <div class="form-content"> 
         <form>
             <fieldset>
                 <legend>Info</legend>
@@ -26,7 +28,8 @@
                 <input type="checkbox" id="show-pwd"> <label>I have read the terms and condition.</label>
             </fieldset>
             <button id="submit-btn">Submit</button>
-        </form>
+         </form>
+    </div>
     </div>
 </body>
 </html>
