added some style on the registration page

--- a/register.html
+++ b/register.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration page</title>
     <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
-    <style>
-        .main-form h2 a{
-             text-decoration: none;
-             color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
     <div class="main-form">
        <h2><a href="index.html">Home</a></h2> 
+       <p>Create Account</p>
       <div class="form-content"> 
         <form>
             <fieldset>
