--- a/register.html
+++ b/register.html
@@ -15,9 +15,9 @@
         <form>
             <fieldset>
                 <legend>Info</legend>
-                <label for="fname">First name:</label>
+                <label for="fname">First name</label>
                 <input type="text" name="firstname" id="fname" placeholder="firstname" required>
-                <label for="lname">Last name:</label>
+                <label for="lname">Last name</label>
                 <input type="text" name="lasttname" id="lname" placeholder="lastname" required>
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="ex@me.com" required>
