added more styling to the registration page

--- a/register.html
+++ b/register.html
@@ -26,8 +26,8 @@
                 <label for="pwd">Repeat password</label>
                 <input type="password" name="pwd" id="pwd" placeholder="Password" required>
             </fieldset>
-            <fieldset>
-                <input type="checkbox" id="show-pwd"> <label>I have read the terms and condition.</label>
+            <fieldset class="check">
+                <input type="checkbox" id="show-pwd"> <p>I have read the <a href="#">terms and condition</a>.</p>
             </fieldset>
             <button id="submit-btn">Submit</button>
          </form>
