working on the login page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             </div>
           </div>
        </div>
+       <div class="login-modal">
+         <div class="login-page"></div>
+         <input type="text" id="user-id" name="user-id" placeholder="User-id / Email" required>
+         <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
+         <div><input type="checkbox" id="check">
+            <p>Show password.</p>
+         </div>
+         
+       </div>
     </div>
     <script src="script.js"></script>
 </body>
