--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main-form">
-       <h2><a href="index.html">Home</a></h2> 
+        <a href="index.html"><button><i class="fa-solid fa-arrow-left"></i></button></a>
        <p>Create Account</p>
       <div class="form-content"> 
         <form>
