styling the login page

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
           </div>
        </div>
        <div class="login-modal">
-         <div class="login-page"></div>
+         <div class="main-page">
+         <div class="login-page">
          <input type="text" id="user-id" name="user-id" placeholder="User-id / Email" required>
          <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
-         <div><input type="checkbox" id="check">
+         <div class="inline-input"><input type="checkbox" id="check">
             <p>Show password.</p>
          </div>
-         
+      </div>
+      <div class="login-bg"></div>
+      </div>
        </div>
     </div>
     <script src="script.js"></script>
