--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a href="contact.html">Contact</a>
             </div>
             <div class="user">
-               <p><a href="login.html">Login  </a>/<a href="register.html"> Register</a></p> 
+               <p><a href="trying.html">Login  </a>/<a href="register.html"> Register</a></p> 
             </div>
           </div>
           <div class="main">
