--- a/trying.html
+++ b/trying.html
@@ -62,11 +62,14 @@
     <div class="login-modal">
         <div class="main-page">
         <div class="login-page">
-        <input type="text" id="user-id" name="user-id" placeholder="User-id / Email" required>
-        <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
+            <P>User-id</P>
+          <input type="text" id="user-id" name="user-id" placeholder="User-id / Email" required>
+          <P>Password</P>
+          <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
         <div class="inline-input"><input type="checkbox" id="check">
            <p>Show password.</p>
         </div>
+        <button>Login</button>
      </div>
      <div class="login-bg"></div>
      </div>
