debuging my work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a href="contact.html">Contact</a>
             </div>
             <div class="user">
-               <p onclick='document.getElementById("login-modal").style.display = "block"'>Login</p><p>/</p><p><a href="register.html"> Register</a></p> 
+               <p><a href="trying.html">Login</a></p><p>/</p><p><a href="register.html"> Register</a></p> 
             </div>
           </div>
           <div class="main">
@@ -39,25 +39,7 @@
           </div>
        </div>
        <!--this is the modal login page-->
-    <div class="login-modal animate" id="login-modal">
-        <div class="modal" id="modal">
-        <div class="main-page">
-        <i class="fa-solid fa-xmark close" onclick='document.getElementById("login-modal").style.display= "none"' ></i>
-        <div class="login-page">
-          <P class="p1">Username</P>
-          <input type="text" id="user-id" name="user-id" placeholder="Username / Email" required>
-          <P class="p1">Password</P>
-          <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
-        <div class="inline-input"><input type="checkbox" id="check">
-           <p class="p2">Remember me</p>
-        </div>
-        <button class="b-log">Login</button>
-        <p>Forgot <a href="#">password</a></p>
-     </div>
-     <div class="login-bg"></div>
-     </div>
-      </div>
-    </div>
+
     
        </div>
     </div>
