--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
                 <a class="change" href="article.html">Article</a>
                 <a class="change" href="contact.html">Contact</a>
             </div>
-            <div class="dark-bright" id="dark-bright" value="change-color"><i class="change fa-solid fa-circle-half-stroke"></i></div>
+            <div class="dark-brights" id="dark-bright" value="change-color"><i class="change fa-solid fa-circle-half-stroke"></i></div>
             <div class="shopping-cart"><i class="change fa-solid fa-cart-shopping"></i>
                 <div class="counter"></div>
             </div>
