comiting and update

--- a/index.html
+++ b/index.html
@@ -39,7 +39,25 @@
           </div>
        </div>
        <!--this is the modal login page-->
-
+       <div class="login-modal animate" id="login-modal">
+         <div class="modal" id="modal">
+         <div class="main-page">
+         <i class="fa-solid fa-xmark" onclick='document.getElementById("login-modal").style.display= "none"' ></i>
+         <div class="login-page">
+           <P>Username</P>
+           <input type="text" id="user-id" name="user-id" placeholder="Username / Email" required>
+           <P>Password</P>
+           <input type="password" id="pwd" name="pwd" placeholder="Enter password" required>
+         <div class="inline-input"><input type="checkbox" id="check">
+            <p>Remember me</p>
+         </div>
+         <button button-bg>Login</button>
+         <p>Forgot <a href="#">password</a></p>
+      </div>
+      <div class="login-bg"></div>
+      </div>
+       </div>
+     </div>
     
        </div>
     </div>
