--- a/trying.html
+++ b/trying.html
@@ -51,7 +51,7 @@
     flex-direction: column;
     align-items: center;
 }
-.login-page input{
+.login-page > input{
     display: block;
     width: 50%;
     padding: 6px;
@@ -81,7 +81,7 @@
     background-size: 100% 100%;
     
 }
-button{
+.button-bg{
     display: block;
     width: 140px;
     padding: 6px;
@@ -126,7 +126,7 @@ button{
         <div class="inline-input"><input type="checkbox" id="check">
            <p>Remember me</p>
         </div>
-        <button>Login</button>
+        <button class="button-bg">Login</button>
         <p>Forgot <a href="#">password</a></p>
      </div>
      <div class="login-bg"></div>
