started styling my page

--- a/trying.html
+++ b/trying.html
@@ -113,7 +113,7 @@
     </style>
 </head>
 <body>
-    <button onclick='document.getElementById("login-modal").style.display = "block"' >Open modal</button>
+    <button class="button-bg" onclick='document.getElementById("login-modal").style.display = "block"' >Open modal</button>
     <div class="login-modal animate" id="login-modal">
         <div class="modal" id="modal">
         <div class="main-page">
