--- a/trying.html
+++ b/trying.html
@@ -93,12 +93,12 @@
     border-radius: 5px;
     margin: 0 auto;
 }
-.fa-solid{
+.fa-xmark{
     position: absolute;
     top: 10px;
     left: 10px;
 }
-.fa-solid:hover{
+.fa-xmark:hover{
     background-color: red;
     color: white;
     border-radius: 50%;
