want to work on the cart page

--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
             <fieldset class="check">
                 <input type="checkbox" id="show-pwd"> <p>I have read the <a href="#">terms and condition</a>.</p>
             </fieldset>
-            <button id="submit-btn">Submit</button>
+            <button class="but1" id="submit-btn">Submit</button>
          </form>
     </div>
     </div>
