--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,9 @@
     <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="body-container"></div>
+    <div class="body-container">
+        <div class="main-side" id="main-side"></div>
+        <div class="minor-side" id="minor-side"></div>
+    </div>
 </body>
 </html>
