--- a/menu.html
+++ b/menu.html
@@ -31,53 +31,53 @@
                     <img src="photos/fries.png" alt="fries">
                     <p>Fresh fries</p>
                     <div class="price-add">
-                      <span>$10</span>
+                      <span class="price">$10</span>
                       <button class="inside-button">Add</button>
                     </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/chicken.png" alt="fries">
-                    <p>Italian fries</p>
+                    <p>Chicken fries</p>
                     <div class="price-add">
-                        <span>$7</span>
+                        <span class="price">$7</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/pizza.png" alt="salad">
-                    <p>Salad</p>
+                    <p>Pizza</p>
                     <div class="price-add">
-                        <span>$3</span>
+                        <span class="price">$3</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/images (3).png" alt="pizza">
-                    <p>pizza</p>
+                    <p>Chips and burger combo</p>
                     <div class="price-add">
-                        <span>$4</span>
+                        <span class="price">$14</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/fruitsalad.jpeg" alt="pizza">
-                    <p>Still fries</p>
+                    <p>Fruit salad</p>
                     <div class="price-add">
-                        <span>$5</span>
+                        <span class="price">$5</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/chees.jpeg" alt="pizza">
-                    <p>Still fries</p>
+                    <p> Fries</p>
                     <div class="price-add">
-                        <span>$10</span>
+                        <span class="price">$10</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/bowlchic.png" alt="pizza">
-                    <p>Pizza</p>
+                    <p>Chicken fried</p>
                     <div class="price-add">
                         <span>$10</span>
                         <button class="inside-button">Add</button>
@@ -85,17 +85,17 @@
                 </div>
                 <div class="col-25">
                     <img src="photos/download (3).jpeg" alt="pizza">
-                    <p>Still fries</p>
+                    <p>Burger</p>
                     <div class="price-add">
-                        <span>$10</span>
+                        <span class="price">$10</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
                 <div class="col-25">
                     <img src="photos/fullchick.png" alt="pizza">
-                    <p>Still fries</p>
+                    <p>Chicken</p>
                     <div class="price-add">
-                        <span>$6</span>
+                        <span class="price">$6</span>
                         <button class="inside-button">Add</button>
                       </div>
                 </div>
