--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
                 <a class="change" href="contact.html">Contact</a>
             </div>
             <div class="dark-brights" id="dark-bright" value="change-color"><i class="change fa-solid fa-circle-half-stroke"></i></div>
-            <div class="shopping-cart"><i class="change fa-solid fa-cart-shopping"></i>
+            <div class="shopping-cart"><a href="cart.html"><i class="change fa-solid fa-cart-shopping"></i></a>
                 <div class="counter"></div>
             </div>
         </div>
