--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,7 @@
 <body>
     <div class="body-container">
         <div class="main-side" id="main-side"></div>
+         <div></div>
         <div class="minor-side" id="minor-side"></div>
     </div>
 </body>
