making further corrections

--- a/cart.html
+++ b/cart.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="body-container">
-        <div class="main-side" id="main-side"></div>
-         <div></div>
+        <div class="main-side" id="main-side">
+            <div class="element"></div>
+        </div>
+        
         <div class="minor-side" id="minor-side"></div>
     </div>
 </body>
