--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,9 @@
 <body>
     <div class="body-container">
         <div class="main-side" id="main-side">
-            <div class="element"></div>
+            <div class="element">
+                <img src="photos/chees.jpeg">
+            </div>
         </div>
         
         <div class="minor-side" id="minor-side"></div>
