--- a/cart.html
+++ b/cart.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="body-container">
+        <div class="header"></div>
         <div class="main-side" id="main-side">
+            <div class="headings">
+                <h3>Item</h3>
+                <h3>Price</h3>
+                <h3>Quanties</h3>
+            </div>
             <div class="element">
                 <img src="photos/chees.jpeg">
             </div>
