--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styl.css" />
     <script src="https://kit.fontawesome.com/268d0caf18.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -17,11 +17,15 @@
                 <h3>Quanties</h3>
             </div>
             <div class="element">
+                <hr />
                 <img src="photos/chees.jpeg">
+                <hr />
             </div>
         </div>
         
-        <div class="minor-side" id="minor-side"></div>
+        <div class="minor-side" id="minor-side">
+
+        </div>
     </div>
 </body>
 </html>
