--- a/cart.html
+++ b/cart.html
@@ -19,6 +19,8 @@
             <div class="element">
                 <hr />
                 <img src="photos/chees.jpeg">
+                <p>Description</p>
+                <p>SIze</p>
                 <hr />
             </div>
         </div>
