first for the day

--- a/cart.html
+++ b/cart.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="body-container">
-        <div class="header"></div>
-        <div class="main-side" id="main-side">
-            <div class="headings">
+        <div class="cart-header"></div>
+        <div class="cart-main-side" id="main-side">
+            <div class="cart-headings">
                 <h3>Item</h3>
                 <h3>Price</h3>
                 <h3>Quanties</h3>
-            </div>
-            <div class="element">
                 <hr />
+            </div>
+            <div class="cart-element">
+                
                 <img src="photos/chees.jpeg">
                 <p>Description</p>
                 <p>SIze</p>
