adding flex to the div

--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,7 @@
 <body>
     <div class="body-container">
         <div class="cart-header"></div>
+        <div class="flex-fix">
         <div class="cart-main-side" id="main-side">
             <div class="cart-headings">
                 <h5>Item</h5>
@@ -23,10 +24,10 @@
                 <p>SIze</p>
                 <hr />
             </div>
-        </div>
+          </div>
         
-        <div class="minor-side" id="minor-side">
-
+          <div class="minor-side" id="minor-side">
+        </div>
         </div>
     </div>
 </body>
