--- a/cart.html
+++ b/cart.html
@@ -27,8 +27,11 @@
           </div>
         
           <div class="minor-side" id="minor-side">
-            <p></p>
-            <p></p>
+            
+            <p>price</p>
+            <p>price</p>
+            <hr />
+            <h4>Total</h4>
         </div>
         </div>
     </div>
