--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,10 @@
             <p>price</p>
             <hr />
             <h4>Total</h4>
+            <p>price</p>
+            <p>price</p>
+            <hr />
+            <h4>Total</h4>
         </div>
         </div>
     </div>
