--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
             </div>
             <div class="dark-brights" id="dark-bright" value="change-color"><i class="change fa-solid fa-circle-half-stroke"></i></div>
             <div class="shopping-cart"><a href="cart.html"><i class="change fa-solid fa-cart-shopping"></i></a>
-                <div class="counter"></div>
+                <div class="counter">0</div>
             </div>
         </div>
         <div class="body-content">
