--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,7 @@
         
           <div class="minor-side" id="minor-side">
     
+            <div class="divone">just to have something on git for now</div>
         </div>
         </div>
     </div>
