--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,7 @@
           </div>
         
           <div class="minor-side" id="minor-side">
+            <div>another one</div>
     
             <div class="divone">just to have something on git for now</div>
         </div>
